--- a/positions-app/package.json
+++ b/positions-app/package.json
@@ -6,16 +6,17 @@
     "@microsoft/signalr": "^8.0.7",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "axios": "^1.8.4",
+    "postcss-selector-parser": "^6.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.0",
+    "react-router": "^6.30.0",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "typescript": "^4.9.5",
@@ -49,12 +50,14 @@
     "@babel/cli": "^7.27.0",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
+    "@testing-library/react": "^16.2.0",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "jest": "^28.0.0",
+    "react-test-renderer": "^19.0.0"
   },
   "jest": {
     "transformIgnorePatterns": [
-      "/node_modules/(?!(@testing-library|react-router-dom)/).+\\.js$"
+      "/node_modules/(?!(@testing-library|react-router-dom|axios)/).+\\.js$"
     ]
   }
 }
